# alopex

./: .gitignore  Cargo.toml  Makefile  README.md  alopexd.service
alopex-daemon/: Cargo.toml  alopexd.py  nmcli-compat.py
alopex-daemon/src/: bluetooth.rs  config.rs  ipc.rs  main.rs
alopex-daemon/src/network/: ethernet.rs  mod.rs  vpn.rs  wifi.rs
alopex-qt/: main.py
alopex-qt/network/: __init__.py  system_integration.py  vpn.py  wifi.py
alopex-qt/ui/: interface_panel.py  main_window.py  management_panel.py  system_tray.py  telemetry_panel.py
alopex-tui/: Cargo.toml
alopex-tui/src/: app.rs  client.rs  main.rs  network.rs
alopex-tui/src/ui/: mod.rs
configs/: shell.nix
docs/: README.md  SECURITY-ARCHITECTURE.md
examples/: critical-networks-example.json  enterprise-config-example.json
services/: alopex-early-network.service
src/alopex-daemon/: alopex-early-network.py  alopexd.py  ebpf_monitor.c  nmcli-compat.py  security.py
src/alopex-qt/: main.py
src/alopex-qt/network/: connection_manager.py  discovery.py  system_integration.py  vpn.py  wifi.py
src/alopex-qt/ui/: __init__.py  arctic_theme.py  interface_panel.py  main_window.py  management_panel.py
website/: about.html  alopex.html  consulting.html  index.html  lethex.html  onyxosv.html  sitemap.html
