[workspace]
members = ["alopex-daemon", "alopex-tui"]
resolver = "2"

[workspace.dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.29"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization & IPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Network Management
netlink-packet-core = "0.7"
netlink-packet-route = "0.20"
netlink-sys = "0.8"

# Configuration
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Bluetooth (via BlueZ D-Bus)
dbus = "0.9"
dbus-tokio = "0.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true