[package]
name = "alopex-daemon"
version = "0.1.0"
edition = "2021"
description = "ALOPEX Network Management Daemon"
authors = ["Onyx Digital Intelligence Development LLC"]
license = "MIT"

[[bin]]
name = "alopexd"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Network management
netlink-packet-core = { workspace = true }
netlink-packet-route = { workspace = true }
netlink-sys = { workspace = true }

# Bluetooth
dbus = { workspace = true }
dbus-tokio = { workspace = true }

# System integration
nix = "0.29"
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }